# oop_labs

1/: CMakeLists.txt  main.cpp  tests.cpp
1/task/: task.cpp  task.h
2/: CMakeLists.txt
2/src/: Seven.cpp  Seven.h
2/tests/: tests.cc
3/: CMakeLists.txt  main.cpp
3/figures/: Figures.cpp  Figures.h  Octagon.cpp  Square.cpp  Triangle.cpp
3/src/: Figure.hpp
3/tests/: tests.cc
4/: CMakeLists.txt  main.cpp
4/figures/: Figures.cpp
4/tests/: tests.cc
5/: CMakeLists.txt  main.cpp  tests.cc
5/src/: Allocator.hpp  UnidirectionalList.hpp
6/: CMakeLists.txt  main.cpp  tests.cc
6/src/Factory/: Factory.cpp  Factory.h
6/src/NPC/: NPC.cpp  NPC.h
6/src/NpcManager/: NpcManager.cpp  NpcManager.h
6/src/Observer/: Observer.h
6/src/Visitor/: Visitor.cpp  Visitor.h
7/: CMakeLists.txt  main.cpp  tests.cc
7/src/NPC/: NPC.cpp  NPC.h
7/src/NpcManager/: NpcManager.cpp  NpcManager.h
7/src/Observer/: Observer.cpp
7/src/Visitor/: Visitor.cpp  Visitor.h
